# ITU-Rpy

./: pyproject.toml
docs/apidoc/: itu1511_table.rst
itur/: utils.py
itur/data/2145/: v0_PSCH.npz  v0_P_001.npz  v0_P_002.npz  v0_P_003.npz  v0_P_005.npz  v0_P_01.npz  v0_P_02.npz  v0_P_03.npz  v0_P_05.npz  v0_P_1.npz  v0_P_10.npz  v0_P_2.npz  v0_P_20.npz  v0_P_3.npz  v0_P_30.npz  v0_P_5.npz  v0_P_50.npz  v0_P_60.npz  v0_P_70.npz  v0_P_80.npz  v0_P_90.npz  v0_P_95.npz  v0_P_99.npz  v0_P_mean.npz  v0_P_std.npz  v0_RHO_001.npz  v0_RHO_002.npz  v0_RHO_003.npz  v0_RHO_005.npz  v0_RHO_01.npz  v0_RHO_02.npz  v0_RHO_03.npz  v0_RHO_05.npz  v0_RHO_1.npz  v0_RHO_10.npz  v0_RHO_2.npz  v0_RHO_20.npz  v0_RHO_3.npz  v0_RHO_30.npz  v0_RHO_5.npz  (+62 more)
itur/data/453/: v14_dn65m_00d10_v1.npz  v14_dn65m_00d20_v1.npz  v14_dn65m_00d50_v1.npz  v14_dn65m_01d00_v1.npz  v14_dn65m_02d00_v1.npz  v14_dn65m_05d00_v1.npz  v14_dn65m_10d00_v1.npz  v14_dn65m_20d00_v1.npz  v14_dn65m_30d00_v1.npz  v14_dn65m_40d00_v1.npz  v14_dn65m_50d00_v1.npz  v14_dn65m_60d00_v1.npz  v14_dn65m_70d00_v1.npz  v14_dn65m_80d00_v1.npz  v14_dn65m_90d00_v1.npz  v14_dn65m_95d00_v1.npz  v14_dn65m_98d00_v1.npz  v14_dn65m_99d00_v1.npz  v14_dn65m_99d50_v1.npz  v14_dn65m_99d80_v1.npz  v14_dn65m_99d90_v1.npz  v14_dn_00d10_v1.npz  v14_dn_00d20_v1.npz  v14_dn_00d50_v1.npz  v14_dn_01d00_v1.npz  v14_dn_02d00_v1.npz  v14_dn_05d00_v1.npz  v14_dn_10d00_v1.npz  v14_dn_20d00_v1.npz  (+36 more)
itur/models/: itu1144.py  itu1511.py  itu2145.py  itu453.py  itu530.py  itu618.py  itu676.py  itu835.py  itu840.py
test/: ITU_validation_test.py  itur_test.py
(+30 files in other folders)
